test/compile-fail/scope/multiple-definition-many/top.rhdl
struct a {}
enum a {}
union a {}
trait a {}
